# gribble

./: .gitignore  Cargo.toml  README.md  release.sh
.github/workflows/: release.yml
src/: app.rs  main.rs  network.rs  utils.rs
src/ui/: help.rs  mod.rs  modal.rs  panels.rs
